# kmriiwa_origin_demo

./: README.md
src/: README.md
src/deep_grasp_demo/deep_grasp_task/: CMakeLists.txt  package.xml
src/deep_grasp_demo/deep_grasp_task/config/: kmriiwa_object_real.yaml  kmriiwa_object_sim.yaml
src/deep_grasp_demo/deep_grasp_task/config/calib/: camera_real.yaml  camera_sim.yaml
src/deep_grasp_demo/deep_grasp_task/include/deep_grasp_task/: deep_pick_place_task.h
src/deep_grasp_demo/deep_grasp_task/launch/: gazebo_pick_place.launch  panda.launch  panda_world.launch  sensor_data_gazebo.launch
src/deep_grasp_demo/deep_grasp_task/scripts/: tf_transform_cylinder.py
src/deep_grasp_demo/deep_grasp_task/src/: deep_grasp_demo_real.cpp  deep_grasp_demo_sim.cpp  deep_pick_place_task_real.cpp  test.cpp
src/deep_grasp_demo/deep_grasp_task/urdf/robots/: panda_camera.urdf.xacro
src/deep_grasp_demo/moveit_task_constructor_gpd/: CMakeLists.txt  package.xml
src/deep_grasp_demo/moveit_task_constructor_gpd/config/: gpd_config.yaml
src/deep_grasp_demo/moveit_task_constructor_gpd/launch/: gpd_demo.launch
src/deep_grasp_demo/moveit_task_constructor_gpd/src/: grasp_detection.cpp
src/depth_image_proc/launch/: point_cloud_xyzrgb.launch
src/depth_image_proc/src/nodelets/: point_cloud_xyzrgb.cpp
src/kmriiwa_ros_stack/kmriiwa_bringup/: package.xml
src/kmriiwa_ros_stack/kmriiwa_bringup/launch/: kmriiwa_bringup.launch  planning_stack_bringup.launch
src/kmriiwa_ros_stack/kmriiwa_description/launch/: kmriiwa_upload.launch
src/kmriiwa_ros_stack/kmriiwa_gazebo/: package.xml
src/kmriiwa_ros_stack/kmriiwa_gazebo/config/: gazebo_iiwa_control.yaml
src/kmriiwa_ros_stack/kmriiwa_gazebo/launch/: depth_to_points.launch  gazebo_pick_place_demo.launch  kmriiwa_empty_world.launch  kmriiwa_experiment.launch
src/kmriiwa_ros_stack/kmriiwa_gazebo/worlds/: experiment_camera.world  experiment_origin.world  experiment_tabletop.world  experiment_tabletop_GPD.world  experiment_test.world  test_zone.world
src/kmriiwa_ros_stack/kmriiwa_moveit/: CMakeLists.txt  package.xml
src/kmriiwa_ros_stack/kmriiwa_moveit/config/: fake_controllers.yaml  gripper_rg2.srdf.xacro  gripper_robotiq.srdf.xacro  joint_limits.yaml  kmriiwa.srdf.xacro  kmriiwa_gripper.srdf.xacro  ompl_planning.yaml  realRG2FT_kmriiwa_ros_controllers.yaml  ros_controllers.yaml
src/kmriiwa_ros_stack/kmriiwa_moveit/launch/: fake_moveit_controller_manager.launch.xml  kmriiwa_moveit_controller_manager.launch.xml  move_group.launch  nodelet.launch.xml  planning_context.launch  planning_pipeline.launch.xml  realsense.launch  trajectory_execution.launch.xml
src/kmriiwa_ros_stack/kmriiwa_moveit/scripts/: merge_joint_states.py
src/kmriiwa_ros_stack/kmriiwa_navigation/config/: common_costmap.yaml  global_costmap_static_map.yaml  local_costmap.yaml  local_planner.yaml
src/kmriiwa_ros_stack/kmriiwa_navigation/launch/: laserscan_merge.launch
src/kmriiwa_ros_stack/kmriiwa_simulation_grasp/: CMakeLists.txt  package.xml
src/moveit_calibration-master/joint_states/: joint_states13.yaml
src/moveit_calibration-master/samples/: samples13.yaml
src/moveit_task_constructor/msgs/: CMakeLists.txt  package.xml
src/onrobot_rg2ft_action_server/launch/: onrobot_rg2ft_action_server.launch  onrobot_rg2ft_moveit.launch
src/onrobot_rg2ft_control/launch/: onrobot_rg2ft_control.launch
src/onrobot_rg2ft_control/scripts/: OnRobotRG2FTDriver.py
(+86 files in other folders)
